--- a/conf/pcom.ini
+++ b/conf/pcom.ini
@@ -3,5 +3,5 @@ database = DBPMVS
 hostname = 10.0.10.39
 port = 50000
 protocol = TCPIP
-uid = andrema
-pwd = marco@21
+uid = rosanun
+pwd = varej@16
